<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="ModelSetup" Id="{85749375-f0be-4490-868a-393a2db0e73f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	samplingtime 			AT%Q* : LREAL := 0.01;
	samplingtimeNC 			AT%Q* : LREAL := 0.002;
	
	signalCreateContainer 	AT%Q* : BOOL;
	sigRemoveFromSeperation 	AT%Q* : BOOL;
	signalMinPosAct 		AT%Q* : LREAL := 0;
	signalMaxPosAct 		AT%Q* : LREAL := 10;
	
	// Seperation
	seperationLowestSensor 	AT%I* : BOOL;
	
	// Conveyor
	signalCreateContainerConveyor 	AT%Q* : BOOL;
	signalRevomeContainerConveyor 	AT%Q* : BOOL;
	
	// Heater
	maxTempHeater 			AT%Q* : UINT := 5500;
	roomTemp 				AT%Q* : UINT := 2000;
	
	// Load Cell
	Prefix 					AT%Q* : STRING(255) := 'N 000'; 		//  := "N 000";
	Postfix 				AT%Q* : STRING(255) := ' g'; 		//  := "0 g";
	desiredWeight 			AT%Q* : LREAL := 50;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>