<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="MAIN" Id="{2f04ebe4-1125-492e-a916-ba3146ea2bec}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	state : INT := 0;
	
start : BOOL := FALSE;
			
	createdContainer : INT := 0;
	containerPosOnConveyor 	AT%I* : LREAL;
	
	timer :ton;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE state OF 
    0: 
		IF (start = TRUE) THEN
			createdContainer := 0;
			start := FALSE;
			state := state +5;
		END_IF
	
// Create Container in Seperation
	5:	ModelSetup.signalCreateContainer := TRUE;
		timer(IN := TRUE, PT := T#1S);
		IF timer.Q THEN
			ModelSetup.signalCreateContainer := FALSE;
			timer(IN := FALSE);
			createdContainer := createdContainer +1;
			state := state +5;
		END_IF
		
		
	10:	
		IF (createdContainer >= 2) THEN
			state := state +5;
		ELSE
			state := state -5;				
		END_IF

// Setup Done
	15: 
		IF (ModelSetup.seperationLowestSensor = FALSE) THEN
			ModelSetup.signalCreateContainerConveyor := TRUE;
			timer(IN := TRUE, PT := T#5S);
			IF timer.Q THEN
				ModelSetup.sigRemoveFromSeperation := FALSE;
				ModelSetup.signalCreateContainerConveyor := FALSE;
				timer(IN := FALSE);
				state := state +5;
			END_IF
		END_IF

	20:	

END_CASE]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="11" Count="1" />
      <LineId Id="26" Count="0" />
      <LineId Id="86" Count="1" />
      <LineId Id="24" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="51" Count="2" />
      <LineId Id="85" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="32" Count="1" />
      <LineId Id="35" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="63" Count="1" />
      <LineId Id="90" Count="2" />
      <LineId Id="96" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="45" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>